@@ -19,7 +19,7 @@ server "it.example.com" {
 	root "/var/gemini/example.com"
 
 	# enable CGI scripts in /cgi-bin/
-	cgi  "/cgi-bin/"
+	cgi  "/cgi-bin/*"
 
 	# optional
 	lang "it"
